@@ -211,6 +211,9 @@
 			<variable name='dansguardian_eth1' type='string' description='Filtre WEB à appliquer sur cette interface' >
 				<value>1</value>
 			</variable>
+			<variable name='auth_eth1' type='string' description="Activer l'authentification sur cette interface (s'applique aussi aux vlans)" >
+				<value>non</value>
+			</variable>
 		</family>
 
 		<!--**** Interfaces 2 **** -->
@@ -259,6 +262,9 @@
 			<!-- variable de configuration pour dansguardian (choix de l'instance) -->
 			<variable name='dansguardian_eth2' type='string' description='Filtre WEB à appliquer sur cette interface' >
 				<value>1</value>
+			</variable>
+			<variable name='auth_eth2' type='string' description="Activer l'authentification sur cette interface (s'applique aussi aux vlans)" >
+				<value>non</value>
 			</variable>
 		</family>
 
@@ -309,6 +315,9 @@
 			<variable name='dansguardian_eth3' type='string' description='Filtre WEB à appliquer sur cette interface' >
 				<value>1</value>
 			</variable>
+			<variable name='auth_eth3' type='string' description="Activer l'authentification sur cette interface (s'applique aussi aux vlans)" >
+				<value>non</value>
+			</variable>
 		</family>
 
 		<!--**** Interfaces 4 **** -->
@@ -357,6 +366,9 @@
 			<!-- variable de configuration pour dansguardian (choix de l'instance) -->
 			<variable name='dansguardian_eth4' type='string' description='Filtre WEB à appliquer sur cette interface' >
 				<value>1</value>
+			<variable name='auth_eth4' type='string' description="Activer l'authentification sur cette interface (s'applique aussi aux vlans)" >
+				<value>non</value>
+			</variable>
 			</variable>
 		</family>
 	<!--************************************************************************************************* -->
@@ -737,6 +749,9 @@
 		<check name="valid_enum" target='dansguardian_eth1'>
 			<param>['1','2']</param>
 		</check>
+		<check name="valid_enum" target='auth_eth1'>
+			<param>['oui','non']</param>
+		</check>
 		<check name="valid_enum" target="eth2_method">
 			<!-- <param>['statique','dhcp']</param> -->
                   <param>['statique']</param>
@@ -758,6 +773,9 @@
 		</check>
 		<check name="valid_enum" target='dansguardian_eth2'>
 			<param>['1','2']</param>
+		</check>
+		<check name="valid_enum" target='auth_eth2'>
+			<param>['oui','non']</param>
 		</check>
 		<check name="valid_enum" target="eth3_method">
 			<!-- <param>['statique','dhcp']</param> -->
@@ -800,12 +818,15 @@
 		<check name="valid_enum" target='nuauth_eth4'>
 			<param>['oui','non']</param>
 		</check>
-                <check name="valid_enum" target="autoriser_rvp_autres">
-                        <param>['oui','non']</param>
-                </check>
 		<check name="valid_enum" target='dansguardian_eth4'>
 			<param>['1','2']</param>
 		</check>
+		<check name="valid_enum" target='auth_eth4'>
+			<param>['oui','non']</param>
+		</check>
+                <check name="valid_enum" target="autoriser_rvp_autres">
+                        <param>['oui','non']</param>
+                </check>
                 <check name="valid_enum" target="autoriser_proxy_autres">
                   <param>['oui','non']</param>
                 </check>
@@ -866,6 +887,10 @@
                 <condition name='hidden_if_in' source='activer_squid_auth'>
                 	<param>non</param>
 			<target type='family'>Authentification</target>
+			<target type='variable'>auth_eth1</target>
+			<target type='variable'>auth_eth2</target>
+			<target type='variable'>auth_eth3</target>
+			<target type='variable'>auth_eth4</target>
 		</condition>
                 <condition name='hidden_if_in' source='activer_log_distant'>
                 	<param>non</param>
