@@ -2864,12 +2864,29 @@ http_access deny rvpdom%%net.index !%%nom_machine_eth1
 %end for
 %end if
 #
-%if %%activer_squid_auth == 'oui' and (%%nom_domaine_smb != '' or %%ip_serveur_ldap1 != '')
-http_access allow password !Reserved
+%if %%activer_squid_auth == 'oui' and (%%nom_domaine_smb != '' or %%ip_serveur_ldap1 != '') and %%auth_eth1 == 'non'
+http_access allow %%nom_machine_eth1
+%if %%vlan_eth1 == "oui"
+%for %%vlans1 in %%id_vlan_eth1
+http_access allow vlan_eth1_%%vlans1 
+%end for
 %end if
-# L'authentification est un paramètre global
+%end if
+#
+%if %%nombre_interfaces >= "3"
+%if %%activer_squid_auth == 'oui' and (%%nom_domaine_smb != '' or %%ip_serveur_ldap1 != '') and %%auth_eth2 == 'non'
+http_access allow %%nom_machine_eth2 !Reserved
+%if %%vlan_eth2 == "oui"
+%for %%vlans2 in %%id_vlan_eth2
+http_access allow vlan_eth2_%%vlans2 !Reserved
+%end for
+%end if
+%end if
+%end if
+#
 %if %%nombre_interfaces >= "4"
 http_access allow reseaueth3
+%if %%activer_squid_auth == 'oui' and (%%nom_domaine_smb != '' or %%ip_serveur_ldap1 != '') and %%auth_eth3 == 'non'
 http_access allow %%nom_machine_eth3
 %if %%vlan_eth3 == "oui"
 %for %%vlans3 in %%id_vlan_eth3
@@ -2878,8 +2895,11 @@ http_access allow reseaueth3_%%vlans3
 %end for
 %end if
 %end if
+%end if
+#
 %if %%nombre_interfaces == "5"
 http_access allow reseaueth4
+%if %%activer_squid_auth == 'oui' and (%%nom_domaine_smb != '' or %%ip_serveur_ldap1 != '') and %%auth_eth4 == 'non'
 http_access allow %%nom_machine_eth4
 %if %%vlan_eth4 == "oui"
 %for %%vlans4 in %%id_vlan_eth4
@@ -2888,20 +2908,12 @@ http_access allow reseaueth4_%%vlans4
 %end for
 %end if
 %end if
-http_access allow %%nom_machine_eth1
-%if %%vlan_eth1 == "oui"
-%for %%vlans1 in %%id_vlan_eth1
-http_access allow vlan_eth1_%%vlans1 
-%end for
 %end if
-%if %%nombre_interfaces >= "3"
-http_access allow %%nom_machine_eth2 !Reserved
-%if %%vlan_eth2 == "oui"
-%for %%vlans2 in %%id_vlan_eth2
-http_access allow vlan_eth2_%%vlans2 !Reserved
-%end for
+# authentification 
+%if %%activer_squid_auth == 'oui' and (%%nom_domaine_smb != '' or %%ip_serveur_ldap1 != '')
+http_access allow password !Reserved
 %end if
-%end if
+#
 %if %%ssh_eth2 =="oui"
 %for %%res_ssh2 in %%ip_ssh_eth2
 http_access allow stadmin%%res_ssh2.index Reserved
