@@ -1,5 +1,7 @@
 Conf-AmonNG
-
+2/10/2008 (sam)
+- dico + squid.conf : gestion de l'authentification en fonction des interfaces
+ 
 01/10/2008
 - support de certs_nuauth (key_nuauth, cert_nuauth, cacert_nuauth) pour les certifications nuauth
 
